--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-number-format": "^5.4.4",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
