--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,5 +3,14 @@ Django==5.2.4
 django-cors-headers==4.7.0
 django-environ==0.12.0
 djangorestframework==3.16.0
+et_xmlfile==2.0.0
+numpy==2.2.6
+openpyxl==3.1.5
+pandas==2.3.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.14.1
+tzdata==2025.2
+voluptuous==0.15.2
