--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nivo/bar": "^0.99.0",
-    "@nivo/core": "^0.99.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.11",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-number-format": "^5.4.4",
+    "recharts": "^3.1.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
